# minrs

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  scrnsht.sh
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
examples/: bw_2d.rs  detail_2d.rs  four_2d.rs
fuzz/: Cargo.toml
fuzz/fuzzers/: fuzzer_script_1.rs
src/: frag_bw_2d_140.glsl  frag_detail0_2d_140.glsl  frag_detail_2d_140.glsl  frag_four_2d_140.glsl  main.rs  vert_2d_140.glsl
